<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/menu_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_green_1"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            >
            <ImageView
                android:id="@+id/menu_back_btn"
                android:layout_width="@dimen/backBt"
                android:layout_height="@dimen/prof_img_h"
                android:src="@drawable/back" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menupage_top_text"
                android:textColor="@color/white"
                android:textSize="24sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/menu_page_settings"
                android:textColor="@color/blue_green_5"
                android:textSize="30sp"
                android:layout_marginTop="@dimen/erText"
                android:layout_marginBottom="@dimen/erText"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/menupage_settings2"
                android:textColor="@color/blue_green_5"
                android:textSize="30sp"
                android:layout_marginTop="@dimen/erText"
                android:layout_marginBottom="@dimen/erText"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/menpage_settings3"
                android:textColor="@color/blue_green_5"
                android:textSize="30sp"
                android:layout_marginTop="@dimen/erText"
                android:layout_marginBottom="@dimen/erText"
                />
        </LinearLayout>


    </LinearLayout>

</ScrollView>