<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/new_post_main"
    android:orientation="vertical"
    android:background="@color/blue_green_1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ImageView
            android:id="@+id/new_post_back_btn"
            android:layout_width="@dimen/backBt"
            android:layout_height="@dimen/prof_img_h"
            android:src="@drawable/back" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/erText"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:text="@string/new_post_top_text"
            />

    </LinearLayout>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/new_post_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/cardView"
        android:background="@color/blue_green_3"
        android:hint="@string/new_post_text_input"
        android:padding="@dimen/erText"
        android:inputType="text|textCapSentences|textMultiLine"
        android:gravity="top|start"
        android:lineSpacingExtra="@dimen/gap"
        android:lineSpacingMultiplier="1.2"
        android:maxHeight="@dimen/cardView"
        android:maxLength="200"
        android:singleLine="false"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_margin="@dimen/erText"
        android:textSize="14sp" />
    <LinearLayout
        android:id="@+id/new_post_attach_image_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/erText"
        android:layout_marginStart="@dimen/erText"
        android:layout_marginEnd="@dimen/erText"
        android:background="@color/blue_green_2"
        android:padding="@dimen/erText"
        >
        <ImageView
            android:id="@+id/new_post_attached_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxHeight="@dimen/settingMenu"
            android:adjustViewBounds="true"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/new_post_add_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/erText"
        android:gravity="center_vertical"
        >
        <ImageView
            android:layout_width="@dimen/pfp"
            android:layout_height="@dimen/pfp"
            android:src="@drawable/circle_plus"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/attachImage"
            android:text="@string/new_post_attach_image"
            android:textColor="@color/white"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        >
        <Button
            android:id="@+id/new_post_post_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_post_post_btn"
            android:layout_marginEnd="@dimen/erText"
            />

    </LinearLayout>

</LinearLayout>