<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/main"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:id="@+id/home_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/topMenu"
                android:background="@color/blue_green_1"
                android:orientation="horizontal"
                android:gravity="center_vertical|center_horizontal"
                android:padding="@dimen/top2"
                >
                <LinearLayout
                    android:id="@+id/account_btn"
                    android:layout_width="@dimen/prof_img_h"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical|center_horizontal"
                    >
                    <ImageView
                        android:layout_width="@dimen/pfp"
                        android:layout_height="@dimen/pfp"
                        android:src="@drawable/user_icon"
                        />
                </LinearLayout>
                <TextView
                    android:id="@+id/mainpage_title"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/mainpage_current_user_info"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal"
                    />
                <LinearLayout
                    android:id="@+id/menu_btn"
                    android:layout_width="@dimen/prof_img_h"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical|center_horizontal"
                    >
                    <ImageView
                        android:layout_width="@dimen/pfp"
                        android:layout_height="@dimen/pfp"
                        android:src="@drawable/menu"
                        />

                </LinearLayout>


            </LinearLayout>

            <RelativeLayout
                android:id="@+id/main_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                >
                <include
                    android:id="@+id/post_recyclerview"
                    layout="@layout/post_recyclerview"
                    />
                <TextView
                    android:id="@+id/home_error_text"
                    android:layout_marginTop="@dimen/erText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mainpage_error_text"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/topMenu"
                android:background="@color/blue_green_1"
                android:orientation="horizontal"
                android:gravity="center"
                android:padding="@dimen/top2"

                >
                <LinearLayout
                    android:id="@+id/new_post_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/blue_green_1"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:paddingLeft="@dimen/prof_img_h"
                    android:paddingRight="@dimen/prof_img_h"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/new_post"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mainpage_newpost_btn"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/homepageBlocking_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="horizontal"
            android:visibility="gone"
            />
        <RelativeLayout
            android:id="@+id/account_relative_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:visibility="invisible"
            >
            <include layout="@layout/accountselect_page"/>
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>